set(PRELOAD_SRC
    preload_context.cpp
    adafs_functions.cpp
    intcp_functions.cpp
    margo_ipc.cpp
    open_file_map.cpp
    open_dir.cpp
    passthrough.cpp
    preload.cpp
    preload_util.cpp
    rpc/ld_rpc_data_ws.cpp
    rpc/ld_rpc_metadentry.cpp
    ../global/rpc/rpc_utils.cpp
    ../global/global_func.cpp
    ../global/path_util.cpp
    )
set(PRELOAD_HEADERS
    ../../configure_public.hpp
    ../../include/global/configure.hpp
    ../../include/global/global_defs.hpp
    ../../include/global/global_func.hpp
    ../../include/global/rpc/ipc_types.hpp
    ../../include/global/rpc/rpc_types.hpp
    ../../include/global/rpc/rpc_utils.hpp
    ../../include/global/path_util.hpp
    ../../include/global/chunk_calc_util.hpp
    ../../include/preload/preload_context.hpp
    ../../include/preload/adafs_functions.hpp
    ../../include/preload/intcp_functions.hpp
    ../../include/preload/margo_ipc.hpp
    ../../include/preload/open_file_map.hpp
    ../../include/preload/open_dir.hpp
    ../../include/preload/passthrough.hpp
    ../../include/preload/preload.hpp
    ../../include/preload/preload_util.hpp
    ../../include/preload/rpc/ld_rpc_data_ws.hpp
    ../../include/preload/rpc/ld_rpc_metadentry.hpp
    )

add_library(adafs_preload_client SHARED ${PRELOAD_SRC} ${PRELOAD_HEADERS})

target_link_libraries(adafs_preload_client
    # internal
    distributor
    log_util
    # external
    dl
    ${ABT_LIBRARIES}
    ${ABT_SNOOZER_LIBRARIES}
    mercury
    ${MARGO_LIBRARIES}
    Threads::Threads
)

target_include_directories(adafs_preload_client
    PRIVATE
    ${ABT_INCLUDE_DIRS}
    ${ABT_SNOOZER_INCLUDE_DIRS}
    ${LIBEV_INCLUDE_DIRS}
    ${MARGO_INCLUDE_DIRS}
    )
